--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@
     }
 
     .crystal-image {
-      width: 200px;
+      width: 150px;
+      padding: 10px;
+      border-radius: 30px;
     }
 
     .scoreBox {
